# smart-tsp-solver

./: .gitignore  LICENSE  LICENSE.txt  NOTICE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
smart_tsp_heuristics/algorithms/dynamic_gravity/v1/: dynamic_gravity_v1.py
smart_tsp_heuristics/algorithms/dynamic_gravity/v2/: dynamic_gravity_v2.py
smart_tsp_heuristics/algorithms/other/greedy/v1/: greedy_v1.py
smart_tsp_heuristics/algorithms/other/greedy/v2/: greedy_v2.py
smart_tsp_heuristics/benchmark/: tsp_benchmark.py
smart_tsp_heuristics/benchmark/utils/: arguments.py
smart_tsp_heuristics/benchmark/utils/calculators/: length.py
smart_tsp_heuristics/benchmark/utils/generators/: cities.py
smart_tsp_heuristics/benchmark/utils/optimizers/: fast_opt.py  two_opt.py
smart_tsp_heuristics/benchmark/utils/visualization/: plot_routes.py
smart_tsp_solver/: __init__.py
smart_tsp_solver/algorithms/angular_radial/v1/: angular_radial_v1.py
smart_tsp_solver/algorithms/angular_radial/v2/: angular_radial_v2.py
smart_tsp_solver/algorithms/dynamic_gravity/v1/: dynamic_gravity_v1.py
smart_tsp_solver/algorithms/dynamic_gravity/v2/: dynamic_gravity_v2.py
smart_tsp_solver/algorithms/hierarchical/: README.md  tsp_solver_v1.py  tsp_solver_v2.py  v1.py  v2.py
smart_tsp_solver/algorithms/other/greedy/: v2.py
smart_tsp_solver/algorithms/other/greedy/v1/: greedy_v1.py
smart_tsp_solver/algorithms/other/greedy/v2/: greedy_v2.py
