[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-tsp-solver"
version = "0.2.0"
description = "A high-performance Python library for solving the Traveling Salesman Problem (TSP) using novel heuristic approaches. Features advanced algorithms that outperform classical methods by ~25% on real-world clustered data while maintaining practical computational efficiency."
authors = [
    {name = "A.A Suvorov", email = "smartlegiondev@gmail.com"}
]
license = "GNU Affero General Public License v3 or later"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "smart-tsp-benchmark~=0.2.1",
    "numba==0.61.2"
]

[project.urls]
Homepage = "https://github.com/smartlegionlab/smart-tsp-solver"

[tool.setuptools.packages.find]
where = ["."]